#3: implemented columns endpoint
